--- a/Mom to be/Mom to be/todo-list.html
+++ b/Mom to be/Mom to be/todo-list.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>ToDo List</title>
+  <title>MY MEDICINE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -140,7 +140,7 @@
             <div class="separator-bottom"></div>
           </nav>
           <div class="wrapper-mask" data-ix="menu-mask"></div>
-          <div class="navbar-title">To-do List</div>
+          <div class="navbar-title">MY MEDICINE</div>
           <div class="w-nav-button navbar-button left" id="menu-button" data-ix="hide-navbar-icons">
             <div class="navbar-button-icon home-icon">
               <div class="bar-home-icon"></div>
@@ -156,10 +156,10 @@
       <div class="body">
         <div class="hero-image">
           <div class="hero-image-title">
-            <h2>Goals</h2>
-            <div class="sub-title-small">&nbsp;3 of 10 tasks &nbsp;|&nbsp;&nbsp;75% completed</div>
+            <h2>MY PILLS</h2>
+            <div class="sub-title-small">&nbsp;2 of 4 pills &nbsp;|&nbsp;&nbsp;50% completed</div>
           </div>
-          <div class="hero-image-img"><img src="images/photo-1429032021766-c6a53949594f.jpg">
+          <div class="hero-image-img"><img src="images/pills.jpg">
           </div>
         </div>
         <ul class="list">
@@ -168,7 +168,7 @@
               <div class="icon-list highlighted">
                 <div class="icon ion-ios-checkmark-empty"></div>
               </div>
-              <div class="title-list">Create a Website</div>
+              <div class="title-list">Iron Pills</div>
             </a>
           </li>
           <li class="list-item" data-ix="list-item">
@@ -176,7 +176,7 @@
               <div class="icon-list">
                 <div class="icon ion-ios-checkmark-empty"></div>
               </div>
-              <div class="title-list">Buy a new car</div>
+              <div class="title-list">Supplements</div>
             </a>
           </li>
           <li class="list-item grey highlighted" data-ix="list-item">
@@ -184,7 +184,7 @@
               <div class="icon-list highlighted">
                 <div class="icon ion-ios-checkmark-empty"></div>
               </div>
-              <div class="title-list">Call Mom</div>
+              <div class="title-list">Navidoxine</div>
             </a>
           </li>
           <li class="list-item" data-ix="list-item">
@@ -192,55 +192,7 @@
               <div class="icon-list">
                 <div class="icon ion-ios-checkmark-empty"></div>
               </div>
-              <div class="title-list">Go to gym</div>
-            </a>
-          </li>
-          <li class="list-item" data-ix="list-item">
-            <a class="w-clearfix w-inline-block" href="#">
-              <div class="icon-list">
-                <div class="icon ion-ios-checkmark-empty"></div>
-              </div>
-              <div class="title-list">Increase Sales Revenue</div>
-            </a>
-          </li>
-          <li class="list-item" data-ix="list-item">
-            <a class="w-clearfix w-inline-block" href="#">
-              <div class="icon-list">
-                <div class="icon ion-ios-checkmark-empty"></div>
-              </div>
-              <div class="title-list">Hire New Developer</div>
-            </a>
-          </li>
-          <li class="list-item grey highlighted" data-ix="list-item">
-            <a class="w-clearfix w-inline-block" href="#">
-              <div class="icon-list highlighted">
-                <div class="icon ion-ios-checkmark-empty"></div>
-              </div>
-              <div class="title-list highlighted">Define new Strategy</div>
-            </a>
-          </li>
-          <li class="list-item" data-ix="list-item">
-            <a class="w-clearfix w-inline-block" href="#">
-              <div class="icon-list">
-                <div class="icon ion-ios-checkmark-empty"></div>
-              </div>
-              <div class="title-list">Develop new Marketing Campaign</div>
-            </a>
-          </li>
-          <li class="list-item" data-ix="list-item">
-            <a class="w-clearfix w-inline-block" href="#">
-              <div class="icon-list">
-                <div class="icon ion-ios-checkmark-empty"></div>
-              </div>
-              <div class="title-list">Hire Accountant</div>
-            </a>
-          </li>
-          <li class="list-item" data-ix="list-item">
-            <a class="w-clearfix w-inline-block" href="#">
-              <div class="icon-list">
-                <div class="icon ion-ios-checkmark-empty"></div>
-              </div>
-              <div class="title-list">Meet John</div>
+              <div class="title-list">Folic Acid</div>
             </a>
           </li>
         </ul>
