--- a/Mom to be/Mom to be/calender2.html
+++ b/Mom to be/Mom to be/calender2.html
@@ -173,7 +173,7 @@
 
               </div>
               <br>
-              <form method="post" action="#">
+              <form method="post" >
               <center><input type="submit" value="Send"></center>
               <br>
                 <center><input type="submit" value="back" onclick="history.go(-1);"/></center>
@@ -206,4 +206,3 @@
 
   </body>
   </html>
-  
