--- a/Mom to be/Mom to be/calender2.html
+++ b/Mom to be/Mom to be/calender2.html
@@ -3,11 +3,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Elements</title>
+  <title>Appointment Booking</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/framework.css">
-  <link rel="stylesheet" type="text/css" href="css/washington.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <script src="js/webfont.js"></script>
   <script>
     WebFont.load({
@@ -139,7 +139,7 @@
             <div class="separator-bottom"></div>
           </nav>
           <div class="wrapper-mask" data-ix="menu-mask"></div>
-          <div class="navbar-title">Settings</div>
+          <div class="navbar-title">Appointments</div>
           <div class="w-nav-button navbar-button left" id="menu-button" data-ix="hide-navbar-icons">
             <div class="navbar-button-icon home-icon">
               <div class="bar-home-icon"></div>
@@ -153,7 +153,7 @@
         <div class="news-container item-new">
           <div>
             <div class="grey-header">
-              <h2 class="grey-heading-title">Header</h2>
+              <h2 class="grey-heading-title">Appointment Booking</h2>
             </div>
 
             <div class="container">
@@ -161,22 +161,16 @@
               <div class="row">
 
               <hr>
-              <br>
-              <br>
-              <h>Appointment Booking </h>
-              <br>
               <div class="row">
                 <div class="col-xss-4">
                   <div id="glob-data" data-toggle="calendar"></div>
                 </div>
               </div>
-
               </div>
               <br>
               <form method="post" >
               <center><input type="submit" value="Send"></center>
               <br>
-                <center><input type="submit" value="back" onclick="history.go(-1);"/></center>
         </form>
           </div>
       </div>
