--- a/Mom to be/Mom to be/index.html
+++ b/Mom to be/Mom to be/index.html
@@ -1,4 +1,13 @@
-<!DOCTYPE html>
+<?php
+session_start();
+include '../config.php';
+mysql_query("SET NAMES 'utf8'");
+mysql_query('SET CHARACTER SET utf8');
+$sessionU=$_SESSION['username_s'];
+$result=mysql_query("SELECT * FROM `patients` WHERE `patient_ID`  ='$sessionU'");
+while($row=mysql_fetch_array($result))
+{?>
+  <!DOCTYPE html>
 
 <html>
 <head>
