--- a/Mom to be/Mom to be/login.html
+++ b/Mom to be/Mom to be/login.html
@@ -3,6 +3,8 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
   <title>Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
@@ -32,6 +34,7 @@
         <div class="logo-login"></div>
         <div class="bottom-section padding">
           <div class="w-form">
+            <form action="wlogcheck.php" method="post">
             <form id="submit-form" name="Nid-form" data-name="Nid Form" data-redirect="settings.html" action="#">
               <div>
                 <label class="label-form" for="Nid-field">USERNAME</label>
@@ -55,6 +58,7 @@
               <p>Oops! Something went wrong while submitting the form</p>
             </div>
           </div>
+        </form>
         </div>
       </div>
     </div>
