--- a/Mom to be/Mom to be/addnew.html
+++ b/Mom to be/Mom to be/addnew.html
@@ -46,7 +46,7 @@
             <div class="separator-fields"></div>
             <div class="background-grey"></div>
             <div class="row-input-list">
-              <label class="label-form" for="title">Medecine name</label>
+              <label class="label-form" for="title">MEDECINE NAME</label>
               <input class="w-input input-form in-grey" id="title" type="text" name="title" data-name="title" required="required">
               <div class="separator-fields"></div>
             </div>
