--- a/Mom to be/Mom to be/Profile.html
+++ b/Mom to be/Mom to be/Profile.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>medecine</title>
+  <title>Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -31,7 +31,8 @@
         <div class="w-container">
           <nav class="w-nav-menu nav-menu" role="navigation">
             <div class="nav-menu-header">
-              <div class="logo">Add you medecine</div>
+              <div class="logo">Washington</div>
+              <div class="slogan">All you need is here.</div>
             </div>
             <a class="w-clearfix w-inline-block nav-menu-link" href="index.html" data-load="1">
               <div class="icon-list-menu">
@@ -139,7 +140,7 @@
             <div class="separator-bottom"></div>
           </nav>
           <div class="wrapper-mask" data-ix="menu-mask"></div>
-          <div class="navbar-title">Add you medecine</div>
+          <div class="navbar-title">PROFILE</div>
           <div class="w-nav-button navbar-button left" id="menu-button" data-ix="hide-navbar-icons">
             <div class="navbar-button-icon home-icon">
               <div class="bar-home-icon"></div>
@@ -154,36 +155,66 @@
         <div class="w-form">
           <form id="email-form" name="email-form" data-name="Email Form" action="#">
             <div>
-              <input type="text" class="w-input input-form enter" value="Enter Name" "label-form">
-              <input type="time" class="w-input input-form enter right" value="Enter Date" "label-form">
-              </div>
-
+              <label class="label-form" for="recoredno-field">MEDICAL RECORED NO.</label>
+              <input class="w-input input-form" id="recoredno-field" type="number" name="recoredno" data-name="recoredno" required="required">
               <div class="separator-fields"></div>
-
+            </div>
             <div>
-              <div class="w-clearfix ">
-                <label class="label-form middle" for="email">Once a day</label>
+              <label class="label-form" for="full-name-field">FULL NAME</label>
+              <input class="w-input input-form" id="full-name-field" type="text" name="full-name" data-name="full-name" required="required">
+              <div class="separator-fields"></div>
+            </div>
+            <div>
+              <label class="label-form" for="phone-field">PHONE</label>
+              <input class="w-input input-form" id="phone-field" type="number" name="phone" data-name="phone" required="required">
+              <div class="separator-fields"></div>
+            </div>
+            <div>
+              <label class="label-form" for="birthday-field">BIRTHDAY</label>
+              <input class="w-input input-form" id="birthday-field" type="text" name="birthday" data-name="birthday" required="required">
+              <div class="separator-fields"></div>
+            </div>
+            <div>
+              <label class="label-form" for="duedate-field">EXPECTED DATE OF BIRTH</label>
+              <input class="w-input input-form" id="duedate-field" type="text" name="duedate" data-name="duedate" required="required">
+              <div class="separator-fields"></div>
+            </div>
+            <div>
+              <label class="label-form" for="baby-Name-field">MY BABY'S NAME</label>
+              <input class="w-input input-form" id="baby-Name-field" type="text" name="baby-Name" data-name="baby-Name" required="required">
+              <div class="separator-fields"></div>
+            </div>
+            <div>
+              <div class="w-clearfix input-form one-line">
+                <label class="label-form middle" for="email">GENDER</label>
                 <div class="w-clearfix radios-container">
-
+                  <div class="w-radio w-clearfix radio-button">
+                    <div class="radio-bullet-replacement "></div>
+                    <input class="w-radio-input radio-bullet" id="node" type="radio" name="Radio1" value="1" data-name="Radio1">
+                    <label class="w-form-label" for="node">BOY</label>
+                  </div>
                   <div class="w-radio w-clearfix radio-button">
                     <div class="radio-bullet-replacement girl  ckecked"></div>
-                    <input class="w-radio-input radio-bullet" id="node" type="radio" name="Radio1" value="0" data-name="Radio1">
+                    <input class="w-radio-input radio-bullet" id="node-2" type="radio" name="Radio1" value="0" data-name="Radio1">
+                    <label class="w-form-label" for="node-2">GIRL</label>
+                  </div>
+                  <div class="w-radio w-clearfix radio-button">
+                    <div class="radio-bullet-replacement twins "></div>
+                    <input class="w-radio-input radio-bullet" id="node-2" type="radio" name="Radio1" value="0" data-name="Radio1">
+                    <label class="w-form-label" for="node-2">TWINS</label>
                   </div>
                 </div>
-                </div>
-                <div class="w-clearfix input-form ">
-                  <label class="label-form middle" for="email">Twice a day</label>
-                  <div class="w-clearfix radios-container">
-
-                    <div class="w-radio w-clearfix radio-button">
-                      <div class="radio-bullet-replacement girl  ckecked"></div>
-                      <input class="w-radio-input radio-bullet" id="node1" type="radio" name="Radio1" value="0" data-name="Radio1">
-                    </div>
-
-                  </div>
-                  </div>
-
               </div>
+              <div class="separator-fields"></div>
+            </div>
+            <div>
+              <label class="label-form" for="email-field">EMAIL</label>
+              <input class="w-input input-form" id="email-field" type="email" name="email" data-name="email" required="required">
+              <div class="separator-fields"></div>
+            </div>
+            <div>
+              <label class="label-form" for="password-ield">PASSWORD</label>
+              <input class="w-input input-form" id="password-ield" type="password" name="password" data-name="password" required="required">
               <div class="separator-fields"></div>
             </div>
             <div>
