--- a/Mom to be/Mom to be/stages.html
+++ b/Mom to be/Mom to be/stages.html
@@ -30,7 +30,7 @@
       <div class="w-nav navbar" data-collapse="all" data-animation="over-left" data-duration="400" data-contain="1" data-easing="ease-out-quint" data-no-scroll="1">
         <div class="w-container">
           <div class="wrapper-mask" data-ix="menu-mask"></div>
-          <div class="navbar-title">Prenancy stages</div>
+          <div class="navbar-title">Pregnancy stages</div>
           <a class="w-inline-block navbar-button" href="news.html" data-load="1">
             <div class="navbar-button-icon icon ion-ios-close-empty"></div>
           </a>
