--- a/Mom to be/Mom to be/about-us.html
+++ b/Mom to be/Mom to be/about-us.html
@@ -61,7 +61,7 @@
             </a>
             <a class="w-clearfix w-inline-block nav-menu-link" href="notification.html" data-load="1">
               <div class="icon-list-menu">
-                <div class="icon ion-ios-albums-outline"></div>
+                <div><img src="icons/alarm.png"></div>
               </div>
               <div class="nav-menu-titles">Notifications</div>
               <div class="nav-menu-text-right">5</div>
@@ -75,25 +75,25 @@
             </a>
             <a class="w-clearfix w-inline-block nav-menu-link" href="medicine.html" data-load="1">
               <div class="icon-list-menu">
-                <div class="icon ion-ios-checkmark-outline"></div>
+                <div><img src="icons/medi.png"></div>
               </div>
               <div class="nav-menu-titles">My Medicine</div>
             </a>
             <a class="w-clearfix w-inline-block nav-menu-link" href="Doctor.html" data-load="1">
               <div class="icon-list-menu">
-                <div class="icon ion-ios-keypad-outline"></div>
+                <div><img src="icons/doctor.png"></div>
               </div>
               <div class="nav-menu-titles">Your Doctor</div>
             </a>
             <a class="w-clearfix w-inline-block nav-menu-link" href="Stages.html" data-load="1">
               <div class="icon-list-menu">
-                <div class="icon ion-ios-keypad-outline"></div>
+                <div><img src="icons/stages.png"></div>
               </div>
               <div class="nav-menu-titles">Pregnancy Stages</div>
             </a>
             <a class="w-clearfix w-inline-block nav-menu-link" href="calender2.html" data-load="1">
               <div class="icon-list-menu">
-                <div class="icon ion-ios-calender-outline"></div>
+                <div><img src="icons/calendar.png"></div>
               </div>
               <div class="nav-menu-titles">Appointments</div>
             </a>
