--- a/Mom to be/Mom to be/report.html
+++ b/Mom to be/Mom to be/report.html
@@ -31,52 +31,27 @@
         <div class="w-container">
           <nav class="w-nav-menu nav-menu" role="navigation">
             <div class="nav-menu-header">
-              <div class="logo">Washington</div>
-              <div class="slogan">All you need is here.</div>
+              <div class="logo">MOM TO BE</div>
+              <div class="slogan">A Baby Is A Little Bit Of<br/>Heaven On Earth</div>
             </div>
             <a class="w-clearfix w-inline-block nav-menu-link" href="index.html" data-load="1">
               <div class="icon-list-menu">
                 <div class="icon ion-ios-home-outline"></div>
               </div>
-              <div class="nav-menu-titles">Splash Screen</div>
+              <div class="nav-menu-titles">HOME</div>
             </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="login.html" data-load="1">
+            <a class="w-clearfix w-inline-block nav-menu-link" href="Profile.html" data-load="1">
               <div class="icon-list-menu">
-                <div class="icon ion-ios-download-outline"></div>
+                <div class="icon ion-ios-person-outline"></div>
               </div>
-              <div class="nav-menu-titles">Login</div>
+              <div class="nav-menu-titles">Profile</div>
             </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="signup.html" data-load="1">
-              <div class="icon-list-menu">
-                <div class="icon ion-ios-cloud-upload-outline"></div>
-              </div>
-              <div class="nav-menu-titles">Sign Up</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="forgot.html" data-load="1">
-              <div class="icon-list-menu">
-                <div class="icon ion-ios-unlocked-outline"></div>
-              </div>
-              <div class="nav-menu-titles">Remember Password</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="todo-list.html" data-load="1">
+            <a class="w-clearfix w-inline-block nav-menu-link" href="report.html" data-load="1">
               <div class="icon-list-menu">
                 <div class="icon ion-ios-list-outline"></div>
               </div>
-              <div class="nav-menu-titles">To Do List</div>
-              <div class="nav-menu-text-right">8</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="addnew.html" data-load="1">
-              <div class="icon-list-menu">
-                <div class="icon ion-ios-checkmark-outline"></div>
-              </div>
-              <div class="nav-menu-titles">New To Do</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="messages.html" data-load="1">
-              <div class="icon-list-menu">
-                <div class="icon ion-ios-albums-outline"></div>
-              </div>
-              <div class="nav-menu-titles">Messages</div>
-              <div class="nav-menu-text-right">8</div>
+              <div class="nav-menu-titles">Reports</div>
+              <div class="nav-menu-text-right">1</div>
             </a>
             <a class="w-clearfix w-inline-block nav-menu-link" href="chat.html" data-load="1">
               <div class="icon-list-menu">
@@ -84,50 +59,55 @@
               </div>
               <div class="nav-menu-titles">Chat</div>
             </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="groups.html" data-load="1">
+            <a class="w-clearfix w-inline-block nav-menu-link" href="notification.html" data-load="1">
               <div class="icon-list-menu">
-                <div class="icon ion-ios-keypad-outline"></div>
+                <div><img src="icons/alarm.png"></div>
               </div>
-              <div class="nav-menu-titles">News Groups</div>
-              <div class="nav-menu-text-right">12</div>
+              <div class="nav-menu-titles">Notifications</div>
+              <div class="nav-menu-text-right">5</div>
             </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="news.html" data-load="1">
+            <a class="w-clearfix w-inline-block nav-menu-link" href="articles.html" data-load="1">
               <div class="icon-list-menu">
                 <div class="icon ion-ios-paper-outline"></div>
               </div>
-              <div class="nav-menu-titles">News List</div>
-              <div class="nav-menu-text-right">14</div>
+              <div class="nav-menu-titles">Articles</div>
+              <div class="nav-menu-text-right">3</div>
             </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="newitem.html" data-load="1">
+            <a class="w-clearfix w-inline-block nav-menu-link" href="medicine.html" data-load="1">
               <div class="icon-list-menu">
-                <div class="icon ion-ios-compose-outline"></div>
+                <div><img src="icons/medi.png"></div>
               </div>
-              <div class="nav-menu-titles">News Post</div>
-              <div class="nav-menu-text-right">14</div>
+              <div class="nav-menu-titles">My Medicine</div>
             </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="about-us.html" data-load="1">
+            <a class="w-clearfix w-inline-block nav-menu-link" href="Doctor.html" data-load="1">
               <div class="icon-list-menu">
-                <div class="icon ion-ios-person-outline"></div>
+                <div><img src="icons/doctor.png"></div>
               </div>
-              <div class="nav-menu-titles">About the App</div>
+              <div class="nav-menu-titles">Your Doctor</div>
             </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="maps.html" data-load="1">
+            <a class="w-clearfix w-inline-block nav-menu-link" href="Stages.html" data-load="1">
+              <div class="icon-list-menu">
+                <div><img src="icons/stages.png"></div>
+              </div>
+              <div class="nav-menu-titles">Pregnancy Stages</div>
+            </a>
+            <a class="w-clearfix w-inline-block nav-menu-link" href="calender2.html" data-load="1">
+              <div class="icon-list-menu">
+                <div><img src="icons/calendar.png"></div>
+              </div>
+              <div class="nav-menu-titles">Appointments</div>
+            </a>
+            <a class="w-clearfix w-inline-block nav-menu-link" href="Location.html" data-load="1">
               <div class="icon-list-menu">
                 <div class="icon ion-ios-location-outline"></div>
               </div>
-              <div class="nav-menu-titles">Maps</div>
+              <div class="nav-menu-titles">Location</div>
             </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="elements.html" data-load="1">
+            <a class="w-clearfix w-inline-block nav-menu-link" href="about-us.html" data-load="1">
               <div class="icon-list-menu">
-                <div class="icon ion-ios-box-outline"></div>
+              <div class="icon ion-ios-gear-outline"></div>
               </div>
-              <div class="nav-menu-titles">Elements</div>
-            </a>
-            <a class="w-clearfix w-inline-block nav-menu-link" href="settings.html" data-load="1">
-              <div class="icon-list-menu">
-                <div class="icon ion-ios-gear-outline"></div>
-              </div>
-              <div class="nav-menu-titles">Settings</div>
+              <div class="nav-menu-titles">About the App</div>
             </a>
             <a class="w-clearfix w-inline-block nav-menu-link last" href="terms.html" data-load="1">
               <div class="icon-list-menu">
