--- a/Mom to be/Mom to be/about-us.html
+++ b/Mom to be/Mom to be/about-us.html
@@ -140,7 +140,7 @@
           <p>Built by Survivors Team
             <br>Mom To Be App, Health-care information system . Can be used with IOS, Android and even for mobile web.</p>
           <div class="separator-button"></div>
-          <div class="separator-button"></div><a class="action-button grey" href="#">Rate this App</a>
+          <div class="separator-button"></div><a class="action-button pink" href="https://www.apple.com/itunes/">Rate this App</a>
           <div class="separator-button"></div>
           <div class="link-upper">© 2017 W-Hospital</div>
           <div class="separator-bottom"></div>
