--- a/Mom to be/Mom to be/advice.html
+++ b/Mom to be/Mom to be/advice.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Exercises</title>
+  <title>Health Care</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -30,8 +30,8 @@
       <div class="w-nav navbar" data-collapse="all" data-animation="over-left" data-duration="400" data-contain="1" data-easing="ease-out-quint" data-no-scroll="1">
         <div class="w-container">
           <div class="wrapper-mask" data-ix="menu-mask"></div>
-          <div class="navbar-title">Health care</div>
-          <a class="w-inline-block navbar-button" href="news.html" data-load="1">
+          <div class="navbar-title">Health Care</div>
+          <a class="w-inline-block navbar-button" href="articles.html" data-load="1">
             <div class="navbar-button-icon icon ion-ios-close-empty"></div>
           </a>
         </div>
@@ -42,20 +42,18 @@
 
             <div class="text-new">
               <div class="separator-fields"></div>
-              <h2 class="title-new">Stay Healthy</h2>
+              <h2 class="title-new">Staying Healthy During Pregnancy</h2>
               <div class="separator-fields"></div><img src="images/care.jpg">
               <div class="separator-fields"></div>
               <div class="separator-fields"></div>
 
-              <p class="description-new"> Looking for usefull information </p>
+              <p class="description-new">If you're thinking about getting pregnant -- or if you already are -- you probably know some of the basics about taking care of yourself and the baby. Don't smoke. Don't drink. Get your rest. Here are more tips, from taking vitamins to what to do with the kitty litter, that can help ensure a safe and healthy pregnancy.</p>
               <div class="separator-button"></div>
-              <h2 class="title-new">Important vitamins</h2>
-              <p class="description-new">Talk about some vitamins for pregrant mom.</p>
-
+              <h2 class="title-new">Take a Prenatal Vitamin</h2>
               <div class="separator-fields"></div><img src="images/vitamin.jpg">
               <div class="separator-fields"></div>
               <div class="separator-fields"></div>
-              <p class="description-new">Incase i have smth to add </p>
+              <p class="description-new">Even when you're still trying to conceive, it's smart to start taking prenatal vitamins. Your baby's neural cord, which becomes the brain and spinal cord, develops within the first month of pregnancy, so it's important you get essential nutrients, like folic acid, calcium, and iron, from the very start. Prenatal vitamins are available over the counter at most drug stores, or you can get them by prescription from your doctor. If taking them makes you feel queasy, try taking them at night or with a light snack. Chewing gum or sucking on hard candy afterward can help, too.</p>
 
                 </div>
               </a>
