--- a/Mom to be/Mom to be/articles.html
+++ b/Mom to be/Mom to be/articles.html
@@ -119,13 +119,25 @@
             <div class="separator-bottom"></div>
             <div class="separator-bottom"></div>
           </nav>
-          <div class="wrapper-mask" data-ix="menu-mask"></div>
-          <div class="navbar-title">Articles</div>
+		  <div class="wrapper-mask" data-ix="menu-mask"></div>
+
+		  <div class="navbar-title">Articles</div>
+
           <a class="w-inline-block navbar-button right" href="#" data-ix="search-box">
             <div class="navbar-button-icon icon ion-ios-plus-empty"></div>
           </a>
+
+          <div class="w-nav-button navbar-button left" id="menu-button" data-ix="hide-navbar-icons">
+            <div class="navbar-button-icon home-icon">
+              <div class="bar-home-icon"></div>
+              <div class="bar-home-icon"></div>
+              <div class="bar-home-icon"></div>
+            </div>
+          </div>
+
         </div>
       </div>
+
       <div class="body padding smaller search-fixed" id="search-fixed">
         <div class="w-form">
           <form id="email-form" name="email-form" data-name="Email Form" action="#">
