--- a/Mom to be/Mom to be/chat.html
+++ b/Mom to be/Mom to be/chat.html
@@ -30,7 +30,7 @@
         <div class="w-container">
           <div class="wrapper-mask" data-ix="menu-mask"></div>
           <div class="navbar-title">Chat</div>
-          <a class="w-inline-block navbar-button" href="messages.html" data-load="1">
+          <a class="w-inline-block navbar-button" href="history.go(-1);" data-load="1">
             <div class="navbar-button-icon icon ion-ios-arrow-thin-left"></div>
           </a>
         </div>
