--- a/Mom to be/Mom to be/food.html
+++ b/Mom to be/Mom to be/food.html
@@ -31,7 +31,7 @@
         <div class="w-container">
           <div class="wrapper-mask" data-ix="menu-mask"></div>
           <div class="navbar-title">Healthy eating</div>
-          <a class="w-inline-block navbar-button" href="news.html" data-load="1">
+          <a class="w-inline-block navbar-button" href="articles.html" data-load="1">
             <div class="navbar-button-icon icon ion-ios-close-empty"></div>
           </a>
         </div>
@@ -42,18 +42,18 @@
 
             <div class="text-new">
               <div class="separator-fields"></div>
-              <h2 class="title-new">Stay Healthy</h2>
+              <h2 class="title-new">Eat Folate-Rich Foods</h2>
               <div class="separator-fields"></div><img src="images/eat.jpg">
               <div class="separator-fields"></div>
               <div class="separator-fields"></div>
-              <p class="description-new">talk about important food</p>
+              <p class="description-new">"Folic acid is crucial for the proper development of the baby's neural tube (it covers the spinal cord), and it's vital for the creation of new red blood cells," says Frances Largeman-Roth, R.D., author of the new book Feed the Belly. Even before you find out you're pregnant, it's smart to start eating plenty of folate-rich foods like fortified cereals, asparagus, lentils, wheat germ, oranges, and orange juice.</p>
               <div class="separator-button"></div>
 
-              <h2 class="title-new">what helps the baby</h2>
-              <div class="separator-fields"></div><img src="images/eat.jpg">
+              <h2 class="title-new">Recharge with Fruit</h2>
+              <div class="separator-fields"></div><img src="images/eat2.jpg">
               <div class="separator-fields"></div>
               <div class="separator-fields"></div>
-              <p class="description-new">smth helpfull</p>
+              <p class="description-new">Most doctors recommend limiting caffeine during pregnancy, since it can have harmful effects on you and the baby. Cutting back can be tough, though -- especially when you're used to your morning java. For a quick pick-me-up, try nibbling on some fruit. "The natural sugars in fruits like bananas and apples can help lift energy levels," says registered dietitian Frances Largeman-Roth.</p>
               <div class="separator-fields"></div>
               <div class="separator-fields"></div>
 
