--- a/Mom to be/Mom to be/medicine.html
+++ b/Mom to be/Mom to be/medicine.html
@@ -128,7 +128,7 @@
               <div class="bar-home-icon"></div>
             </div>
           </div>
-          <a class="w-inline-block navbar-button right" href="addnew.html" data-loader="1">
+          <a class="w-inline-block navbar-button right" href="addnew.php" data-loader="1">
             <div class="navbar-button-icon icon ion-ios-plus-empty"></div>
           </a>
         </div>
