--- a/Mom to be/Mom to be/stages.html
+++ b/Mom to be/Mom to be/stages.html
@@ -119,11 +119,20 @@
             <div class="separator-bottom"></div>
             <div class="separator-bottom"></div>
           </nav>
-          <div class="wrapper-mask" data-ix="menu-mask"></div>
-          <div class="navbar-title">Pregnancy stages</div>
-          <a class="w-inline-block navbar-button" href="news.html" data-load="1">
+			<div class="wrapper-mask" data-ix="menu-mask"></div>
+			<div class="navbar-title">Pregnancy stages</div>
+
+          <div class="w-nav-button navbar-button left" id="menu-button" data-ix="hide-navbar-icons">
+            <div class="navbar-button-icon home-icon">
+              <div class="bar-home-icon"></div>
+              <div class="bar-home-icon"></div>
+              <div class="bar-home-icon"></div>
+            </div>
+          </div>
+          <!--<div class="wrapper-mask" data-ix="menu-mask"></div>
+           <a class="w-inline-block navbar-button" href="news.html" data-load="1">
             <div class="navbar-button-icon icon ion-ios-close-empty"></div>
-          </a>
+          </a> -->
         </div>
       </div>
       <div class="body">
@@ -145,23 +154,17 @@
             <div class="text-new">
               <div class="separator-fields"></div>
 
-              <h2 class="title-new">About this weak</h2>
+			  <h2 class="title-new" style="text-align:center; color:#CB4276;">Week 14</h2>
+              <h2 class="title-new">How your baby's growing</h2>
               <div class="separator-fields"></div>
-              <p class="description-new"> weak 14 bla bla bla</p>
+              <p class="description-new">This week's big developments: Your baby can now squint, frown, grimace, pee, and possibly suck his thumb! Thanks to brain impulses, his facial muscles are getting a workout as his tiny features form one expression after another. His kidneys are producing urine, which he releases into the amniotic fluid around him – a process he'll keep up until birth. He can grasp, too, and if you're having an ultrasound soon, you may even catch him sucking his thumb. In other news: Your baby's stretching out. From head to bottom, he measures 3 1/2 inches – about the size of a lemon – and he weighs 1 1/2 ounces. His body's growing faster than his head, which now sits upon a more distinct neck. By the end of this week, his arms will have grown to a length that's in proportion to the rest of his body. (His legs still have some lengthening to do.)
+			  <br>Your baby is starting to develop an ultrafine, downy covering of hair, called lanugo, all over his body. Your baby's liver starts making bile this week – a sign that it's doing its job right – and his spleen starts helping produce red blood cells. Though you can't feel his tiny punches and kicks yet, your little one's hands and feet (which now measure about 1/2 inch long) are more flexible and active.
+			  </p>
               <div class="separator-button"></div>
 
-              <h2 class="title-new">What</h2>
-              <p class="description-new">bla bla bla.</p>
-
-              <div class="separator-fields"></div>
-              <div class="separator-fields"></div>
-              <p class="description-new"> bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla </p>
-
-
-
-              <div class="separator-fields"></div>
-              <div class="separator-fields"></div>
-
+              <h2 class="title-new">How your life's changing</h2>
+              <p class="description-new">Welcome to your second trimester! Your energy is likely returning, your breasts may be feeling less tender, and your queasiness may have completely abated by now. If not, hang on – chances are good it will soon be behind you (although an unlucky few will still feel nauseated months from now).
+				<br>The top of your uterus is a bit above your pubic bone, which may be enough to push your tummy out a tad. Starting to show can be quite a thrill, giving you and your partner visible evidence of the baby you've been waiting for. Take some time to plan, daydream, and enjoy this amazing time. It's normal to worry a bit now and then, but try to focus on taking care of yourself and your baby, and have faith that you're well equipped for what's ahead.</p>
 
                 </div>
               </a>
