--- a/Mom to be/Mom to be/index.html
+++ b/Mom to be/Mom to be/index.html
@@ -35,7 +35,7 @@ while($row=mysql_fetch_array($result))
 <body>
   <section class="w-section mobile-wrapper">
 
-    <div class="page-content" id="main-stack" data-scroll="0" data-splash="2000" data-redirect="login.php">
+    <div class="page-content" id="main-stack" data-scroll="0" data-splash="2000" data-redirect="login.html">
       <div class="w-nav navbar"></div>
       <div class="body padding">
         <div class="splash-logo"></div>
