--- a/Mom to be/Mom to be/notification.html
+++ b/Mom to be/Mom to be/notification.html
@@ -135,7 +135,9 @@
         <ul class="list list-messages">
           <li class="list-message" data-ix="list-item">
               <div class="w-clearfix column-left">
+                <a href="report.html">
                 <div class="image-message"><img src="images/report.png">
+                </a>
                 </div>
               </div>
               <div class="column-right">
@@ -146,7 +148,9 @@
           </li>
           <li class="list-message" data-ix="list-item">
               <div class="w-clearfix column-left">
+                <a href="medicine.html">
                 <div class="image-message"><img src="images/pills.png">
+                </a>
                 </div>
               </div>
               <div class="column-right">
@@ -157,7 +161,9 @@
           </li>
           <li class="list-message" data-ix="list-item">
               <div class="w-clearfix column-left">
+                <a href="articles.html">
                 <div class="image-message"><img src="images/news.png">
+                </a>
                 </div>
               </div>
               <div class="column-right">
@@ -169,7 +175,9 @@
         </li>
         <li class="list-message" data-ix="list-item">
             <div class="w-clearfix column-left">
+              <a href="chat.html">
               <div class="image-message"><img src="images/chat.png">
+              </a>
               </div>
             </div>
             <div class="column-right">
@@ -180,7 +188,9 @@
         </li>
         <li class="list-message" data-ix="list-item">
             <div class="w-clearfix column-left">
+              <a href="calender2.html">
               <div class="image-message"><img src="images/calendar.png">
+              </a>
               </div>
             </div>
             <div class="column-right">
