--- a/Mom to be/Mom to be/report.html
+++ b/Mom to be/Mom to be/report.html
@@ -143,20 +143,16 @@
           <div class="w-tab-content tabs-content">
             <div class="w-tab-pane w--tab-active w-clearfix tab-pane" data-w-tab="Tab 1">
               <div class="group-block">
-                <a class="w-inline-block" href="lab.html" data-load="1">
                   <div class="group-image"></div>
                   <div class="group-title">
-                    <div class="title-text">Lab Result</div>
+                    <a class="w-inline-block" href="lab.html" data-load="1"><div class="title-text">Lab Result</div></a>
                   </div>
-                </a>
               </div>
               <div class="group-block last">
-                <a class="w-inline-block" href="radiology.html" data-load="1">
                   <div class="group-image bg1"></div>
                   <div class="group-title">
-                    <div class="title-text">Radiology</div>
+                    <a class="w-inline-block" href="radiology.html" data-load="1"><div class="title-text">Radiology</div></a>
                   </div>
-                </a>
               </div>
             </div>
             <div class="w-tab-pane tab-pane" data-w-tab="Tab 2">
