--- a/Mom to be/Mom to be/yoga.html
+++ b/Mom to be/Mom to be/yoga.html
@@ -31,7 +31,7 @@
         <div class="w-container">
           <div class="wrapper-mask" data-ix="menu-mask"></div>
           <div class="navbar-title">Yoga and exercise</div>
-          <a class="w-inline-block navbar-button" href="news.html" data-load="1">
+          <a class="w-inline-block navbar-button" href="articles.html" data-load="1">
             <div class="navbar-button-icon icon ion-ios-close-empty"></div>
           </a>
         </div>
